commit final, para el recuerdo

--- a/TaskManager/bin/view/ProjectEditDialog.fxml
+++ b/TaskManager/bin/view/ProjectEditDialog.fxml
@@ -15,7 +15,7 @@
         <rowConstraints>
           <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="87.0" vgrow="ALWAYS" />
           <RowConstraints maxHeight="125.0" minHeight="7.0" prefHeight="84.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="86.0" minHeight="5.0" prefHeight="10.0" vgrow="ALWAYS" />
+            <RowConstraints maxHeight="86.0" minHeight="5.0" prefHeight="20.0" vgrow="ALWAYS" />
             <RowConstraints maxHeight="98.0" minHeight="10.0" prefHeight="31.0" vgrow="ALWAYS" />
         </rowConstraints>
          <children>
@@ -36,10 +36,10 @@
                   <RowConstraints maxHeight="18.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label fx:id="priorityField" alignment="CENTER" prefHeight="17.0" prefWidth="197.0" textAlignment="CENTER" />
                   <Slider fx:id="slider" onMouseClicked="#handlePrioridad" onMouseDragged="#handlePrioridad" GridPane.rowIndex="1" />
                </children>
             </GridPane>
+            <Label fx:id="priorityField" alignment="CENTER" prefHeight="17.0" prefWidth="197.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <Button layoutX="93.0" layoutY="245.0" mnemonicParsing="false" onAction="#handleOk" prefHeight="33.0" prefWidth="88.0" style="-fx-background-color: black; -fx-border-color: black;" text="OK" />
