--- a/TaskManager/bin/view/TaskView.fxml
+++ b/TaskManager/bin/view/TaskView.fxml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="200.0" minWidth="200.0" prefHeight="369.0" prefWidth="800.0" styleClass="background" stylesheets="@../../bin/view/App.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
+<AnchorPane minHeight="200.0" minWidth="200.0" prefHeight="529.0" prefWidth="800.0" styleClass="background" stylesheets="@../../bin/view/App.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.TaskViewController">
    <children>
-      <Label fx:id="firstNameLabel" layoutX="502.0" layoutY="25.0" prefHeight="21.0" prefWidth="225.0" text="Nombre" AnchorPane.rightAnchor="73.0" />
-      <AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="369.0" prefWidth="193.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Label fx:id="firstNameLabel" layoutX="506.0" layoutY="32.0" prefHeight="21.0" prefWidth="225.0" text="Nombre" AnchorPane.rightAnchor="69.0" />
+      <AnchorPane layoutY="6.0" minHeight="100.0" minWidth="100.0" prefHeight="523.0" prefWidth="193.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="6.0">
          <children>
-            <Button layoutX="14.0" layoutY="34.0" mnemonicParsing="false" onAction="#handleNewProject" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Crear Proyecto" AnchorPane.rightAnchor="16.0" />
+            <Button layoutX="15.0" layoutY="54.0" mnemonicParsing="false" onAction="#handleNewProject" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Crear Proyecto" AnchorPane.rightAnchor="15.0" />
             <Button layoutX="14.0" layoutY="322.0" mnemonicParsing="false" onAction="#handleTaskView" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Vista Tareas" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="16.0" />
-            <Button layoutX="14.0" layoutY="121.0" mnemonicParsing="false" onAction="#handleTasksInProject" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Tareas asociadas" AnchorPane.rightAnchor="16.0" />
-            <Button layoutX="14.0" layoutY="164.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Eliminar Proyecto" AnchorPane.rightAnchor="16.0" />
-            <Button layoutX="14.0" layoutY="78.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Editar Proyecto" AnchorPane.rightAnchor="16.0" />
+            <Button layoutX="15.0" layoutY="141.0" mnemonicParsing="false" onAction="#handleTasksInProject" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Tareas asociadas" AnchorPane.rightAnchor="15.0" />
+            <Button layoutX="15.0" layoutY="184.0" mnemonicParsing="false" onAction="#handleDeleteProject" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Eliminar Proyecto" AnchorPane.rightAnchor="15.0" />
+            <Button layoutX="15.0" layoutY="98.0" mnemonicParsing="false" onAction="#handleEditProject" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Editar Proyecto" AnchorPane.rightAnchor="15.0" />
             <Button layoutX="15.0" layoutY="267.0" mnemonicParsing="false" onAction="#handleDashboard" prefHeight="33.0" prefWidth="163.0" style="-fx-background-color: black; -fx-border-color: black;" text="Dashboard" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="15.0" />
          </children>
       </AnchorPane>
-      <Label fx:id="priorityLabel" layoutX="619.0" layoutY="152.0" prefHeight="21.0" prefWidth="108.0" text="Prioridad" AnchorPane.rightAnchor="106.0" />
-      <Label fx:id="contextLabel" layoutX="618.0" layoutY="205.0" prefHeight="21.0" prefWidth="157.0" text="Contexto" AnchorPane.rightAnchor="54.0" />
-      <Label fx:id="deadlineLabel" layoutX="618.0" layoutY="314.0" prefHeight="21.0" prefWidth="157.0" text="Deadline" AnchorPane.rightAnchor="54.0" />
-      <Label layoutX="502.0" layoutY="152.0" text="Prioridad" AnchorPane.rightAnchor="249.0" />
-      <Label layoutX="489.0" layoutY="314.0" prefHeight="21.0" prefWidth="62.0" text="Deadline" AnchorPane.rightAnchor="249.0" />
-      <Label layoutX="502.0" layoutY="205.0" prefHeight="21.0" prefWidth="49.0" text="Estado" AnchorPane.rightAnchor="262.0" />
-      <Label layoutX="502.0" layoutY="261.0" prefHeight="21.0" prefWidth="62.0" text="Inicio" AnchorPane.rightAnchor="249.0" />
-      <Label fx:id="inicioLabel" layoutX="618.0" layoutY="261.0" prefHeight="21.0" prefWidth="157.0" AnchorPane.rightAnchor="54.0" />
-      <AnchorPane layoutX="187.0" layoutY="5.0" prefHeight="299.0" prefWidth="270.0" styleClass="label-bright" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="187.0" AnchorPane.rightAnchor="343.0" AnchorPane.topAnchor="5.0">
+      <Label fx:id="priorityLabel" layoutX="616.0" layoutY="139.0" prefHeight="21.0" prefWidth="108.0" text="Prioridad" AnchorPane.rightAnchor="76.0" />
+      <Label fx:id="contextLabel" layoutX="615.0" layoutY="183.0" prefHeight="21.0" prefWidth="157.0" text="Contexto" AnchorPane.rightAnchor="28.0" />
+      <Label fx:id="deadlineLabel" layoutX="617.0" layoutY="268.0" prefHeight="21.0" prefWidth="157.0" text="Deadline" AnchorPane.rightAnchor="26.0" />
+      <Label layoutX="506.0" layoutY="139.0" text="Prioridad" AnchorPane.rightAnchor="235.0" />
+      <Label layoutX="506.0" layoutY="268.0" prefHeight="21.0" prefWidth="62.0" text="Deadline" AnchorPane.rightAnchor="235.0" />
+      <Label layoutX="506.0" layoutY="183.0" prefHeight="21.0" prefWidth="49.0" text="Estado" AnchorPane.rightAnchor="248.0" />
+      <Label layoutX="506.0" layoutY="220.0" prefHeight="21.0" prefWidth="62.0" text="Inicio" AnchorPane.rightAnchor="235.0" />
+      <Label fx:id="inicioLabel" layoutX="616.0" layoutY="220.0" prefHeight="21.0" prefWidth="157.0" AnchorPane.rightAnchor="27.0" />
+      <AnchorPane layoutX="211.0" layoutY="3.0" prefHeight="466.0" prefWidth="270.0" styleClass="label-bright" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="211.0" AnchorPane.rightAnchor="319.0" AnchorPane.topAnchor="3.0">
          <children>
             <TableView fx:id="proyectTable" layoutY="14.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0" prefWidth="256.0" styleClass="label-bright" AnchorPane.bottomAnchor="-40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="14.0">
                <columnResizePolicy>
@@ -39,10 +40,11 @@
             </TableView>
          </children>
       </AnchorPane>
-      <ScrollPane layoutX="502.0" layoutY="74.0" maxHeight="48.0" maxWidth="225.0" prefHeight="48.0" prefViewportHeight="33.0" prefViewportWidth="207.0" prefWidth="225.0" AnchorPane.rightAnchor="73.0">
+      <ScrollPane layoutX="506.0" layoutY="67.0" maxHeight="48.0" maxWidth="260.0" prefHeight="48.0" prefViewportHeight="33.0" prefViewportWidth="207.0" prefWidth="252.0" AnchorPane.rightAnchor="43.0">
          <content>
             <Label fx:id="descriptionLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="46.0" prefWidth="673.0" styleClass="background" text="Descripcion" />
          </content>
       </ScrollPane>
+      <ImageView fx:id="imagen" fitHeight="80.0" fitWidth="270.0" layoutX="487.0" layoutY="423.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="26.0" AnchorPane.rightAnchor="43.0" />
    </children>
 </AnchorPane>
